public class ServerDriver {
    public static void main(String[] args) {
        ChatServer chatserver = new ChatServer();
    }
}